<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_action_search"
        android:title="@string/abc_search_hint"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more"
        android:title=""
        app:showAsAction="always">
    <menu>
        <item
            android:icon="@drawable/ic_share"
            android:id="@+id/menu_share"
            android:title="@string/share"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/menu_rate"
            android:icon="@drawable/ic_rate"
            android:title="@string/rate"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"
            app:showAsAction="ifRoom"/>

    </menu>
    </item>



</menu>