<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Fragment_profile">

    <ImageView
        android:id="@+id/profile_IMG_font"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="325dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_font_profile"
        android:visibility="visible"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/profile_BTN_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/profile_IMG_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_profile"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="150dp"
        android:layout_marginTop="50dp">

    <TextView
        android:id="@+id/profile_LBL_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/profile_LBL_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_city"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/profile_LBL_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_phone"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/profile_LBL_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_mail"
        android:textColor="@color/white"
        android:textSize="20sp" />

    </LinearLayout>


</FrameLayout>